# textime

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg
src/textime/: textime.py
