[metadata]
name = package_name
version = package_version
author = Eric Mendes
author_email = ericvelasco.2000@gmail.com
description = Small description
long_description = file: README.md
long_description_content_type = text/markdown
url = repository_home
project_urls =
    Bug Tracker = repository_issue_page
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PACKAGE_DEPENDENCIES

[options.packages.find]
where = src