[metadata]
name = textime
version = 1.0.6
author = Eric Mendes
author_email = ericvelasco.2000@gmail.com
description = Python library that converts a date written as plain text to a datetime object.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Eric-Mendes/textime
project_urls =
    Bug Tracker = https://github.com/Eric-Mendes/textime/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src